--- a/Modacity/Modacity/ViewController/MetroDrone/metrodone.storyboard
+++ b/Modacity/Modacity/ViewController/MetroDrone/metrodone.storyboard
@@ -219,13 +219,13 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mP5-cL-DjE">
-                                        <rect key="frame" x="0.0" y="23" width="121.5" height="111.5"/>
+                                        <rect key="frame" x="0.0" y="23" width="112" height="111.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KoV-Qw-HBC">
-                                                <rect key="frame" x="20" y="23.5" width="82" height="65"/>
+                                                <rect key="frame" x="15.5" y="23.5" width="82" height="65"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6My-F5-oWc">
-                                                        <rect key="frame" x="46.5" y="29.5" width="36" height="36"/>
+                                                        <rect key="frame" x="46" y="29.5" width="36" height="36"/>
                                                         <state key="normal" image="icon_plus"/>
                                                         <connections>
                                                             <action selector="onChangeBPMStop:" destination="U5I-Ap-dmF" eventType="touchUpInside" id="CgB-5A-a2l"/>
@@ -234,13 +234,13 @@
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nA9-Kq-9EG">
-                                                        <rect key="frame" x="32" y="0.5" width="19" height="19"/>
+                                                        <rect key="frame" x="31.5" y="0.5" width="19" height="19"/>
                                                         <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="16"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hwe-7c-ypv">
-                                                        <rect key="frame" x="0.5" y="29.5" width="36" height="36"/>
+                                                        <rect key="frame" x="0.0" y="29.5" width="36" height="36"/>
                                                         <state key="normal" image="icon_minus"/>
                                                         <connections>
                                                             <action selector="onChangeBPMStop:" destination="U5I-Ap-dmF" eventType="touchUpInside" id="aDK-hk-t78"/>
@@ -269,10 +269,7 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0za-oA-9Ec">
-                                        <rect key="frame" x="121.5" y="23" width="102" height="102"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="0za-oA-9Ec" secondAttribute="height" multiplier="1:1" id="vig-Yl-Jms"/>
-                                        </constraints>
+                                        <rect key="frame" x="112" y="23" width="111.5" height="111.5"/>
                                         <state key="normal" image="btn_drone_play_large"/>
                                         <connections>
                                             <action selector="onBtnPlay:" destination="U5I-Ap-dmF" eventType="touchUpInside" id="cZL-VF-swb"/>
@@ -308,7 +305,9 @@
                                 <constraints>
                                     <constraint firstItem="Hp2-Y5-8nZ" firstAttribute="leading" secondItem="mP5-cL-DjE" secondAttribute="leading" id="6Ho-jC-eaS"/>
                                     <constraint firstItem="bUR-cw-pNK" firstAttribute="centerX" secondItem="PDS-pn-jne" secondAttribute="centerX" id="6nI-kc-fj5"/>
+                                    <constraint firstItem="0za-oA-9Ec" firstAttribute="top" secondItem="O0c-uk-TJe" secondAttribute="top" id="90L-5Q-FYX"/>
                                     <constraint firstItem="mP5-cL-DjE" firstAttribute="top" secondItem="O0c-uk-TJe" secondAttribute="top" id="92R-nO-cCh"/>
+                                    <constraint firstItem="0za-oA-9Ec" firstAttribute="width" secondItem="O0c-uk-TJe" secondAttribute="width" id="9yY-5i-U8I"/>
                                     <constraint firstItem="0za-oA-9Ec" firstAttribute="leading" secondItem="mP5-cL-DjE" secondAttribute="trailing" id="AWY-WT-JAI"/>
                                     <constraint firstItem="bUR-cw-pNK" firstAttribute="top" secondItem="O0c-uk-TJe" secondAttribute="bottom" id="BUg-5g-059"/>
                                     <constraint firstItem="eQt-OA-VdR" firstAttribute="top" secondItem="PDS-pn-jne" secondAttribute="top" id="Gva-0t-ZHQ"/>
@@ -317,8 +316,8 @@
                                     <constraint firstItem="O0c-uk-TJe" firstAttribute="leading" secondItem="0za-oA-9Ec" secondAttribute="trailing" id="SrK-qJ-pKy"/>
                                     <constraint firstAttribute="bottom" secondItem="bUR-cw-pNK" secondAttribute="bottom" id="Yg2-cv-T2g"/>
                                     <constraint firstAttribute="trailing" secondItem="O0c-uk-TJe" secondAttribute="trailing" id="YgW-cY-UP9"/>
+                                    <constraint firstItem="0za-oA-9Ec" firstAttribute="height" secondItem="O0c-uk-TJe" secondAttribute="height" id="aLq-4i-dcL"/>
                                     <constraint firstAttribute="trailing" secondItem="eQt-OA-VdR" secondAttribute="trailing" id="hbc-cA-KLa"/>
-                                    <constraint firstItem="O0c-uk-TJe" firstAttribute="top" secondItem="0za-oA-9Ec" secondAttribute="top" id="i1I-oK-e3A"/>
                                     <constraint firstItem="O0c-uk-TJe" firstAttribute="width" secondItem="O0c-uk-TJe" secondAttribute="height" multiplier="1:1" id="si3-y9-LHl"/>
                                     <constraint firstItem="eQt-OA-VdR" firstAttribute="leading" secondItem="PDS-pn-jne" secondAttribute="leading" id="tBS-rb-WdL"/>
                                     <constraint firstItem="O0c-uk-TJe" firstAttribute="width" secondItem="PDS-pn-jne" secondAttribute="width" multiplier="1/3" id="tpl-zk-K3C"/>
